# claude-sdk

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: client.rs  error.rs  lib.rs  session.rs  streaming.rs  tools.rs  transport.rs  types.rs
tests/: integration.rs
