[package]
name = "apiari-claude-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Rust SDK for the Claude CLI — spawn, stream, and manage Claude agent sessions"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
